--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       <strong>We're sorry but cultural-map doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <div class="svg_container" style="display:none"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
