Updates * Added popups. * Added Filter. * Added Filters to avoid use the same point many times.

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
       <strong>We're sorry but cultural-map doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <div class="svg_container" style="display:none"></div>
+    <script id="popupMarkup" type="text/template">
+      <h1>value_nombre</h1>
+      <h2>value_area</h2>
+    </script>
     <!-- built files will be auto injected -->
   </body>
 </html>
