--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="/favicon.ico">
     <title>cultural-map</title>
-    <link rel="stylesheet" href="/vendors/css/leaflet.css">
-    <link rel="stylesheet" href="/vendors/css/leaflet-measure.css">
-    <link rel="stylesheet" href="/vendors/css/MarkerCluster.css">
-    <link rel="stylesheet" href="/vendors/css/MarkerCluster.Default.css">
-    <link rel="stylesheet" href="/vendors/css/custom.css">
+    <link rel="stylesheet" href="vendors/css/leaflet.css">
+    <link rel="stylesheet" href="vendors/css/leaflet-measure.css">
+    <link rel="stylesheet" href="vendors/css/MarkerCluster.css">
+    <link rel="stylesheet" href="vendors/css/MarkerCluster.Default.css">
+    <link rel="stylesheet" href="vendors/css/custom.css">
     <script src="vendors/js/vendor/leaflet-src.js" crossorigin=""></script>
     <script src="vendors/js/vendor/leaflet.markercluster.js" crossorigin=""></script>
   <link href="/about.js" rel="prefetch"><link href="/app.js" rel="preload" as="script"></head>
@@ -24,5 +24,5 @@
       <h2>value_area</h2>
     </script>
     <!-- built files will be auto injected -->
-  <script type="text/javascript" src="/app.js"></script></body>
+  <script type="text/javascript" src="./app.js"></script></body>
 </html>
