--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="https://ogranada.github.io/mapacultural/favicon.ico">
     <title>cultural-map</title>
-    <link rel="stylesheet" href="//ogranada.github.io/mapacultural/vendors/css/leaflet.css">
-    <link rel="stylesheet" href="//ogranada.github.io/mapacultural/vendors/css/leaflet-measure.css">
-    <link rel="stylesheet" href="//ogranada.github.io/mapacultural/vendors/css/MarkerCluster.css">
-    <link rel="stylesheet" href="//ogranada.github.io/mapacultural/vendors/css/MarkerCluster.Default.css">
-    <link rel="stylesheet" href=//ogranada.github.io/mapacultural/"vendors/css/custom.css">
-    <script src="//ogranada.github.io/mapacultural/vendors/js/vendor/leaflet-src.js" crossorigin=""></script>
-    <script src="//ogranada.github.io/mapacultural/vendors/js/vendor/leaflet.markercluster.js" crossorigin=""></script>
-  <link href="//ogranada.github.io/mapacultural/about.js" rel="prefetch"><link href="/app.js" rel="preload" as="script"></head>
+    <link rel="stylesheet" href="vendors/css/leaflet.css">
+    <link rel="stylesheet" href="vendors/css/leaflet-measure.css">
+    <link rel="stylesheet" href="vendors/css/MarkerCluster.css">
+    <link rel="stylesheet" href="vendors/css/MarkerCluster.Default.css">
+    <link rel="stylesheet" href="vendors/css/custom.css">
+    <script src="vendors/js/vendor/leaflet-src.js" crossorigin=""></script>
+    <script src="vendors/js/vendor/leaflet.markercluster.js" crossorigin=""></script>
+    <script>
+      window.baseUrl = "https://ogranada.github.io/mapacultural/";
+    </script>
+  <link href="https://ogranada.github.io/mapacultural/about.js" rel="prefetch"><link href="https://ogranada.github.io/mapacultural/app.js" rel="preload" as="script"></head>
   <body>
     <noscript>
       <strong>We're sorry but cultural-map doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
@@ -24,5 +27,5 @@
       <h2>value_area</h2>
     </script>
     <!-- built files will be auto injected -->
-  <script type="text/javascript" src="//ogranada.github.io/mapacultural/app.js"></script></body>
+  <script type="text/javascript" src="https://ogranada.github.io/mapacultural/app.js"></script></body>
 </html>
